Bugfix: frio - use white-space: pre-wrap for code elements

--- a/view/theme/frio/css/style.css
+++ b/view/theme/frio/css/style.css
@@ -88,7 +88,7 @@ blockquote {
     display: none !important;
 }
 code {
-	white-space: pre;
+	white-space: pre-wrap;
 }
 
 /*
